src/objects/Privilege_Role__c.object
<CustomObject>
    <fields>
        <fullName>PR_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PR Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Privilege Role</relationshipLabel>
        <relationshipName>Privilege_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Privilege__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup Privilege</description>
        <label>Privilege</label>
        <referenceTo>Privilege__c</referenceTo>
        <relationshipLabel>Privilege Role</relationshipLabel>
        <relationshipName>Privilege_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup Role</description>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Privilege Role</relationshipLabel>
        <relationshipName>Privilege_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Privilege Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Privilege Role Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>